styled buttons on parcels app

--- a/Parcels/views/cost.erb
+++ b/Parcels/views/cost.erb
@@ -1,4 +1,4 @@
-<html>
+
 <head>
     <meta charset = "utf-8">
     <link rel="stylesheet" type="text/css" href="/style.css">
@@ -11,10 +11,10 @@
         <div class = "input-boxes">
             <h2> Total shipping cost: $<%=@shipping_cost%> </h2>
             <h2> For <%=@shipping_method%> shipping </h2>
-            <a href="/"> Calculate another parcel </a>
+            <a href = '/'><button class = "button"> Calculate another parcel </button></a>
         </div>
     </div>
 </body>
-</html>
+
 
 
