--- a/Parcels/views/shipping.erb
+++ b/Parcels/views/shipping.erb
@@ -22,8 +22,9 @@
 
                 <label>Package weight: </label>
                 <input type="text" name="weight">
-
+                
                 <label>Shipping method: </label>
+                <h4 style = "color: red;"><%=@error_message%></h4>
                 <label>enter either 'standard', 'priority', or 'overnight'</label>
                 <input type="text" name="shipping_method">
 
