--- a/Parcels/public/looks.css
+++ b/Parcels/public/looks.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
     h1, h2, h3, h4, h5, h6, p, blockquote, pre,
     a, abbr, acronym, address, big, cite, code,
@@ -89,7 +88,7 @@ html, body, div, span, applet, object, iframe,
         font-family:Verdana, Geneva, Tahoma, sans-serif;
         margin: 1em 0 1em;
     }
-    .button {
+    button {
         background-color: grey;
         color: lightblue;
         width: 15vw; 
