--- a/Parcels/views/shipping.erb
+++ b/Parcels/views/shipping.erb
@@ -1,7 +1,7 @@
 
 <head>
     <meta charset = "utf-8">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/looks.css">
 </head>
 <body>
     <header class = "header">
