--- a/riddles_of_the_sphinx/views/riddle.erb
+++ b/riddles_of_the_sphinx/views/riddle.erb
@@ -1,15 +1,17 @@
 <head>
     <meta charset = "utf-8">
-    <link rel="stylesheet" type="text/css" href="/looks.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
     <header class="header">
-       <h1 class="logo">Riddles Of The Sphinx</h1>
+    <a href="/"><h1 class="logo">Riddles Of The Sphinx</h1></a>
     </header>
     <div class="form-box">
         <div class = "input-boxes">
-            <h3 class="riddle">Riddle: @riddle.riddle</h3>
-            <h3 class="riddle">Answer: @riddle.answer</h3>
+            <h3 class="riddle">RIDDLE:   <%= @riddle.riddle%></h3>
+            <h3 class="riddle">ANSWER:   <%= @riddle.answer%></h3>
+            <a class = "riddle" href="/riddles/<%= @riddle.id %>/edit">Edit riddle</a>
         </div>  
+        
     </div>
 </body>
