--- a/riddles_of_the_sphinx/public/style.css
+++ b/riddles_of_the_sphinx/public/style.css
@@ -65,6 +65,18 @@
         font-weight: lighter;
         font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; 
     }
+    .riddle_link {
+        font-size:large;
+        color:black;
+        position: absolute;
+        margin: 3vh 0 3vh 80vw;
+        padding: 5px;
+        border: 5px double black;
+        border-radius: 2rem;
+        display: inline-block;
+        font-weight: lighter;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
     .form-box {
         background-color: burlywood; 
         height: 100vh;
@@ -78,7 +90,7 @@
         border-radius:2em;
         text-align: center;
         background-color: lightgrey;
-        height:80vh;
+        height:95vh;
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -94,6 +106,11 @@
     .riddle {
         line-height: 2em;
         margin: 3em 0 3em;
+        color: black;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        text-align: center;
+        font-weight: bold;
+        font-style: italic;
     }
     .answer {
         margin: .5em 0 .25em;
@@ -143,4 +160,10 @@
     img {
         border:1px transparent black;
         border-radius: 2em;
+    }
+    ul {
+        margin: 2em;
+    }
+    .input {
+        margin:6em 0;
     }
