--- a/riddles_of_the_sphinx/views/home.erb
+++ b/riddles_of_the_sphinx/views/home.erb
@@ -1,10 +1,11 @@
 <head>
     <meta charset = "utf-8">
-    <link rel="stylesheet" type="text/css" href="/looks.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
     <header class="header">
-       <h1 class="logo">Riddles Of The Sphinx</h1>
+       <a href="/"><h1 class="logo">Riddles Of The Sphinx</h1></a>
+       <a href="/riddles" class="riddle_link"> ?Riddles? </a>
     </header>
     <div class="form-box">
         <div class = "input-boxes">
